service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userregister
  namespace: apps
  labels:
    app.kubernetes.io/name: userregister
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: userregister
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: userregister
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: userregister
          image: 042988369477.dkr.ecr.us-east-1.amazonaws.com/userregister:latest
          imagePullPolicy: Always
          args: 
            - -listen=:8080
          ports:
            - name: app-port
              containerPort: 8080
          resources:
            requests:
              cpu: 0.125
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: userregister
  namespace: apps
  labels:
    app.kubernetes.io/name: userregister
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: userregister
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
